--- a/sycl/doc/extensions/proposed/sycl_ext_oneapi_graph.asciidoc
+++ b/sycl/doc/extensions/proposed/sycl_ext_oneapi_graph.asciidoc
@@ -1107,7 +1107,7 @@ required by the graph (such as after being replaced through executable graph upd
 
 If a buffer created with a host data pointer is recorded as part of a submission to
 a command graph, the lifetime of that host data will also be extended by taking a
-copy of that data inside the buffer. To illustrate, consider an example like this:
+copy of that data inside the buffer. To illustrate, consider the following example:
 
 [source,c++]
 ----
@@ -1128,12 +1128,12 @@ In this example, the implementation extends the lifetime of the buffer because
 it is used in the recorded graph. Because the buffer uses the host memory data,
 the implementation also makes an internal copy of that host data. As illustrated
 above, that host memory might go out of scope before the recorded graph goes out
-of scope.
+of scope, or before the data has been copied to the device.
 
 The default behavior is to always copy the host data in a case like this, but
 this is not necessary if the user knows that the lifetime of the host data
 outlives the lifetime of the recorded graph. If the user knows this is the
-case, he or she may use the graph::no_host_copy property to avoid the internal
+case, they may use the `graph::no_host_copy` property to avoid the internal
 copy. Users can opt-out of this behavior by passing the property `graph::no_host_copy`
 to `command_graph::begin_recording()` or the constructor of the `command_graph`
 the commands will be recorded to. Passing the property to `begin_recording()`
