--- a/sycl/doc/extensions/proposed/sycl_ext_oneapi_graph.asciidoc
+++ b/sycl/doc/extensions/proposed/sycl_ext_oneapi_graph.asciidoc
@@ -881,8 +881,8 @@ graphs during an update are:
 
 * The code that is executed in host-task nodes may be different between graphs,
   and the update will reflect the code from `graph` host-tasks nodes. However,
-  any changes to executable code between kernel nodes is not counted as
-  topologically identical, and is an exception with error code `invalid`.
+  any changes to executable code between kernel nodes are not counted as
+  topologically identical and is an exception with error code `invalid`.
 
 The effects of the update will be visible on the next submission of the
 executable graph without the need for additional user synchronization.
